[metadata]
name = dao-analyzer
version = 0.1.0
description = A tool for analyzing DAO data
author = Silvio Meneguzzo
author_email = meneguzzosilvio@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.3.0
    kagglehub>=0.1.0
    plotly>=5.3.0
    numpy>=1.20.0